--- a/pages/cabMoreno.html
+++ b/pages/cabMoreno.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cabañas | Cabaña Moreno | Casa de Piedra</title>
-        <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-        <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+        <meta name="description" content="Cabaña en alquiler, Cabaña Moreno, Casa de Piedra Bariloche, Cabaña para seis Personas, Amplia cabaña en las costas del lago Moreno">
+        <meta name="keywords" content="cabaña,moreno,lago,bariloche,patagonia,alquiler,hospedaje,sur,argentina,vacaciones,lago,nieve,verano,invierno,turismo,descansar">
         <meta property="og:type" content="article"> 
-        <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
+        <meta property="og:title" content="Cabaña Moreno Casa de Piedra Bariloche">
         <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-        <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
-        <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
+        <meta property="og:url" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/pages/cabMoreno.html">
+        <meta property="og:image" content="http://127.0.0.1:5500/images/interiorcab2.2.jpg">
+        <meta name="twitter:title" content="Cabaña Moreno Casa de Piedra Bariloche">
         <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+        <meta name="twitter:image" content="http://127.0.0.1:5500/images/interiorcab2.2.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
         <link rel="icon" type="image/jpg" href="../images/favicon.ico">
