--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ubicacion | Casa de Piedra Bariloche</title>
-    <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-    <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+    <meta name="description" content="Nuestra Ubicacion, Complejo Casa de Piedra Bariloche, ¿Donde nos encontramos?, Veni a disfrutar tus vacaciones en Bariloche">
+    <meta name="keywords" content="ubicacion,bariloche,patagonia,sur,argentina,llegar,bustillo,km,complejo,hospedaje,vacaciones">
     <meta property="og:type" content="article"> 
-    <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
-    <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
-    <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
-    <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+    <meta property="og:title" content="Ubicacion Casa de Piedra Bariloche Encontranos">
+    <meta property="og:description" content="Ubicacion del complejo Casa de Piedra Bariloche, ¿Donde nos encontramos?">
+    <meta property="og:url" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/pages/ubicacion.html">
+    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/ubiHead.jpg">
+    <meta name="twitter:title" content="Ubicacion Casa de Piedra Bariloche Encontranos">
+    <meta name="twitter:description" content="Ubicacion del complejo Casa de Piedra Bariloche, ¿Donde nos encontramos?">
+    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/ubiHead.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
     <link rel="icon" type="image/jpg" href="../images/favicon.ico">
