--- a/pages/units.html
+++ b/pages/units.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestras Unidades | Cabañas en Bariloche</title>
-    <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-    <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+    <meta name="description" content="Alojamientos en Bariloche,Complejo Casa de Piedra cuenta con Cabañas, Bungalows y Casas Modernas, Veni a descansar y disfrutar de la Patagonia, conoce todas nuestras Unidades">
+    <meta name="keywords" content="cabañas,bungalows,casas,modernas,hospedaje,alquiler,vacaciones,bariloche,patagonia,casa,de,piedra,nahuel,moreno,gutierrez,meliquina,mascardi,catedral,meliquina,invierno,verano,sur">
     <meta property="og:type" content="article"> 
-    <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
-    <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
-    <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
-    <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+    <meta property="og:title" content="Complejo Casa de Piedra Bariloche Unidades">
+    <meta property="og:description" content="Alquila en el Complejo Casa de Piedra en Bariloche, disponemos de Cabañas, Bungalows y Casas Modernas">
+    <meta property="og:url" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/pages/units.html">
+    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/modern2.jpg">
+    <meta name="twitter:title" content="Complejo Casa de Piedra Bariloche Unidades">
+    <meta name="twitter:description" content="Alquila en el Complejo Casa de Piedra en Bariloche, disponemos de Cabañas, Bungalows y Casas Modernas">
+    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/modern2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
     <link rel="icon" type="image/jpg" href="../images/favicon.ico">
