--- a/pages/cabNahuel.html
+++ b/pages/cabNahuel.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabañas | Cabaña Nahuel | Casa de Piedra</title>
-    <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-    <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+    <meta name="description" content="Cabaña en alquiler en Bariloche, Cabaña Nahuel, Cabaña frente al lago Nahuel Huapi, Cabaña para 4 personas, Habitacion  y cocina completa">
+    <meta name="keywords" content="cabaña,bariloche,alquiler,patagonia,nahuel,huapi,sur,vacaciones,descansar,verano,invierno,hospedaje,casa,de,piedra">
     <meta property="og:type" content="article"> 
-    <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
+    <meta property="og:title" content="Cabaña Nahuel Casa de Piedra Bariloche">
     <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
     <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
-    <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
+    <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/interior1.jpg">
+    <meta name="twitter:title" content="Cabaña Nahuel Casa de Piedra Bariloche">
     <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+    <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/interior1.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
     <link rel="icon" type="image/jpg" href="../images/favicon.ico">
