--- a/pages/casaCatedral.html
+++ b/pages/casaCatedral.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Casas Modernas | Bungalow Mascardi</title>
-        <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
-        <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
+        <title>Casas Modernas | Casa Catedral</title>
+        <meta name="description" content="Casa en alquiler, Casa Catedral, Alquiler en Bariloche, Disfruta de la comodidad y las novedades de nuestras Casas Modernas en Bariloche, Hasta 10 personas">
+        <meta name="keywords" content="casa,alquiler,moderno,bariloche,grande,10,personas,familia,patagonia,sur,casa,de,piedra,vacaciones,invierno,verano,viaje">
         <meta property="og:type" content="article"> 
-        <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
-        <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-        <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
-        <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
-        <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/imgtr2.jpg">
+        <meta property="og:title" content="Casa Catedral Alquiler Casa de Piedra Bariloche">
+        <meta property="og:description" content="Alquila tu casa en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques, los lagos y la comodidad">
+        <meta property="og:url" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/pages/casaCatedral.html">
+        <meta property="og:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/catedral3.jpg">
+        <meta name="twitter:title" content="Casa Catedral Alquiler Casa de Piedra Bariloche">
+        <meta name="twitter:description" content="Alquila tu casa en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques, los lagos y la comodidad">
+        <meta name="twitter:image" content="https://vgnfran.github.io/EntregaFinalHoyosFranco/images/catedral3.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
         <link rel="icon" type="image/jpg" href="../images/favicon.ico">
