--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <section class="container-fluid" >
         <div class="row row-cols-1 row-cols-md-3 ">
 
-          <div class="col " id="card" data-aos="fade-right">
+          <div class="col space" id="card" data-aos="fade-right">
             <div class="card shadow-lg" id="cardEx">
               <div class="card-header text-center">
                 Cerro Otto
@@ -237,7 +237,7 @@
             </div>
           </div>
 
-          <div class="col" id="card" data-aos="fade-up">
+          <div class="col space" id="card" data-aos="fade-up">
             <div class="card shadow-lg" id="cardEx">
               <div class="card-header text-center">
                 Ruta de los 7 Lagos
@@ -249,7 +249,7 @@
           <div class="col" id="card">
             <div class="card shadow-lg" id="cardEx" data-aos="fade-left">
               <div class="card-header text-center">
-                Rafting en el Rio Manso
+                Rafting en el Manso
               </div>
               <img src="images/rafting.jpg" class="card-img-top" id="cardEx" alt="rafting">            
             </div>
