--- a/pages/bungMascardi.html
+++ b/pages/bungMascardi.html
@@ -85,13 +85,13 @@
                 <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
-            <div class="abs">
+            <div class="abs" data-aos='fade-down'>
                 <h1 class="h1" >Bungalow Mascardi</h2>
                 <h2 class="h2"> Bungalow dos ambientes</h2>
             </div>
         </section>
 
-        <section class="text-center mt-5 icons">
+        <section class="text-center mt-5 icons" data-aos='fade-right'>
             <div class="mb-5">
                 <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>4</b></h2>
@@ -109,12 +109,12 @@
             </div>
         </section>
 
-        <section>
+        <section data-aos='fade-right'>
             <h3 class="h2 text-center mb-4 info">Informacion del Bungalow.</h2>
             <p class="text-center p">El Bungalow Mascardi posee dos grandes ambientes: En planta alta una amplia habitacion con cama King size, ropero integrado, Tv por cable y calefaccion propia. En planta baja cuenta con un Living con sillon cama en el que se pueden armar dos camas singles, posee un comedor con sillas y Tv. Cocina 100% equipada con horno, y heladera. Tambien posee un baño completo con bañera de hidromasajes. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, deck exterior con parrilla y mesa con sillas.
         </section>
 
-        <section>
+        <section data-aos='fade-left'>
             <h3 class="h3 text-center mt-5 mb-4">Servicios</h3>
             <div class="services">
                 <div class="colum mb-4">
@@ -186,7 +186,7 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" data-aos='fade-up'>
             <h3 class="h3 text-center mt-4">Realice su reserva para el Bungalow Moreno</h3>
             <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
