--- a/pages/cabMoreno.html
+++ b/pages/cabMoreno.html
@@ -85,13 +85,13 @@
                 <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
-            <div class="abs">
+            <div class="abs" data-aos='fade-down'>
                 <h1 class="h1" >Cabaña Moreno</h2>
                 <h2 class="h2"> Cabaña Triple</h2>
             </div>
         </section>
 
-        <section class="text-center mt-5 icons">
+        <section class="text-center mt-5 icons" data-aos='fade-right'>
             <div class="mb-5">
                 <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>6</b></h2>
@@ -109,12 +109,12 @@
             </div>
         </section>
 
-        <section>
+        <section data-aos='fade-right'>
             <h3 class="h2 text-center mb-4 info">Informacion de la Cabaña.</h2>
             <p class="text-center p">La cabaña Moreno posee un gran ambiente dividido: Una habitacion con cama Queen size y una habitacion con dos camas singles, ambas con Tv por cable y calefaccion. Cuenta un amplio Living con un sillon cama en el que se pueden armar dos camas singles, posee una mesa comedor con sillas y hogar a leña. Cocina 100% equipada con horno, heladera y microondas. Tambien posee un baño completo con bañera. Cabaña con ventanales con vista al bosque y al Lago Moreno, deck exterior con parrilla y mesa con sillas.
         </section>
 
-        <section>
+        <section data-aos='fade-left'>
             <h3 class="h3 text-center mt-5 mb-4">Servicios</h3>
             <div class="services">
                 <div class="colum mb-4">
@@ -182,7 +182,7 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" data-aos='fade-up'>
             <h3 class="h3 text-center mt-4">Realice su reserva para la cabaña Moreno</h3>
             <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
