--- a/pages/casaCatedral.html
+++ b/pages/casaCatedral.html
@@ -88,13 +88,13 @@
                 <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
-            <div class="abs">
+            <div class="abs" data-aos='fade-down'>
                 <h1 class="h1" >Casa Catedral</h2>
                 <h2 class="h2"> Casa moderna de 5 ambientes</h2>
             </div>
         </section>
 
-        <section class="text-center mt-5 icons">
+        <section class="text-center mt-5 icons" data-aos='fade-right'>
             <div class="mb-5">
                 <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>10</b></h2>
@@ -112,12 +112,12 @@
             </div>
         </section>
 
-        <section>
+        <section data-aos='fade-right'>
             <h3 class="h2 text-center mb-4 info">Informacion de la Casa.</h2>
             <p class="text-center pm">La Casa Catedral posee dos grandes plantas: En planta alta dos amplias habitaciones con cama King size, Tv con direct TV y calefaccion propia. El dormitorio principal cuenta con baño en suite con bañera de hidromasajes. Ademas cuenta con dos dormitorios con camas individuales. En planta baja cuenta con un Living con sillones y hogar a leña con chimenea, posee un comedor con sillas y Tv. Cocina 100% equipada con horno, heladera con freezer, lavavajillas y microondas. Tambien posee un baño completo con bañera y loza radiante. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, quincho con comedor, parrilla y asador.
         </section>
 
-        <section>
+        <section data-aos='fade-left'> 
             <h3 class="h3 text-center mt-5 mb-4">Servicios</h3>
             <div class="services">
                 <div class="colum mb-4">
@@ -193,7 +193,7 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" data-aos='fade-up'>
             <h3 class="h3 text-center mt-4">Realice su reserva para la Casa Catedral</h3>
             <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
