--- a/pages/casaMeliquina.html
+++ b/pages/casaMeliquina.html
@@ -88,13 +88,13 @@
                 <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
-            <div class="abs">
+            <div class="abs" data-aos='fade-down'>
                 <h1 class="h1" >Casa Meliquina</h2>
                 <h2 class="h2"> Casa moderna de 6 ambientes</h2>
             </div>
         </section>
 
-        <section class="text-center mt-5 icons">
+        <section class="text-center mt-5 icons" data-aos='fade-right'>
             <div class="mb-5">
                 <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>10</b></h2>
@@ -112,13 +112,13 @@
             </div>
         </section>
 
-        <section>
+        <section data-aos='fade-right'>
             <h3 class="h2 text-center mb-4 info">Informacion de la Casa.</h3>
             <p class="text-center pm">La Casa Meliquina posee dos grandes plantas: En planta alta dos amplias habitaciones con cama doble King size, las dos con baño en suite, tv con direct TV y calefaccion propia. Ademas cuenta con tres dormitorios con camas individuales de 1 plaza y media. En planta baja cuenta con un Living con sillones y chimenea de piedra, sala de estar, posee amplio comedor con sillas y Tv. Cocina 100% equipada con horno, heladera con freezer, lavavajillas y microondas. Tambien posee dos baños completos con bañera y loza radiante. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, quincho con comedor, parrilla y asador.
         </section>
 
-        <section>
-            <h3 class="h3 text-center mt-5 mb-4">Servicios</h3>
+        <section data-aos='fade-left'>
+            <h3 class="h3 text-center mt-5 mb-4" >Servicios</h3>
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
@@ -197,7 +197,7 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" data-aos='fade-up'>
             <h3 class="h3 text-center mt-4">Realice su reserva para la Casa Meliquina</h3>
             <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
