--- a/pages/units.html
+++ b/pages/units.html
@@ -87,7 +87,7 @@
               <div class="row rowU">                           <!--row-->
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
-                      <div class="card shadow-lg" >  <!--card1-->
+                      <div class="card shadow-lg" data-aos='fade-right'>  <!--card1-->
                           <img src="../images/caba3.jpg" class="carrousel2" alt="cabañaNahuel">
                           <div class="card-body">
                           <h4 class="card-title">Cabaña Nahuel</h4>
@@ -98,7 +98,7 @@
 
 
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
-                      <div class="card shadow-lg" >  <!--card2-->
+                      <div class="card shadow-lg" data-aos='fade-left'>  <!--card2-->
 
                           <img src="../images/cabamain2.jpg" class="carrousel2" alt="cabañaMoreno">
                           <div class="card-body">
@@ -116,7 +116,7 @@
               <div class="row rowU">                           <!--row-->
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
-                      <div class="card shadow-lg" >  <!--card3-->
+                      <div class="card shadow-lg" data-aos='fade-right'>  <!--card3-->
 
                           <img src="../images/bungalow3.jpg" class="carrousel2" alt="bungalowMascardi">
 
@@ -129,7 +129,7 @@
 
 
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
-                      <div class="card shadow-lg" >  <!--card4-->
+                      <div class="card shadow-lg" data-aos='fade-left'>  <!--card4-->
 
                         <img src="../images/bungalowmain2.jpg" class="carrousel2" alt="bungalowGutierrez">
                       
@@ -150,11 +150,11 @@
               <div class="row rowU">                           <!--row-->
 
                   <div class="col-sm-12 col-md-12 col-xl-6  mb-5"  id="carrouselCardis">  <!--col-->    
-                      <div class="card shadow-lg" >  <!--card3-->
+                      <div class="card shadow-lg" data-aos='fade-right'>  <!--card3-->
 
                           <img src="../images/modernmain2.jpg" class="carrousel2" alt="casaCatedral">
 
-                          <div class="card-body">
+                          <div class="card-body" data-aos='fade-right'>
                           <h4 class="card-title">Casa Catedral</h4>
                           <a href="casaCatedral.html" class="btn btn-outline-secondary btn-sm col-6 ">Ver casa</a>
                           </div>
@@ -163,7 +163,7 @@
 
 
                   <div class="col-sm-12 col-md-12 col-xl-6"  id="carrouselCardis2">  <!--col-->    
-                      <div class="card shadow-lg" >  <!--card4-->
+                      <div class="card shadow-lg" data-aos='fade-left'>  <!--card4-->
 
                           <img src="../images/modern2.jpg" class="carrousel2" alt="casaMeliquina">
 
