--- a/pages/bungGutierrez.html
+++ b/pages/bungGutierrez.html
@@ -84,13 +84,13 @@
                 <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
-            <div class="abs">
+            <div class="abs" data-aos='fade-down'>
                 <h1 class="h1" >Bungalow Gutierrez</h2>
                 <h2 class="h2"> Bungalow tres ambientes</h2>
             </div>
         </section>
 
-        <section class="text-center mt-5 icons">
+        <section class="text-center mt-5 icons" data-aos='fade-right'>
             <div class="mb-5">
                 <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>7</b></h2>
@@ -108,12 +108,12 @@
             </div>
         </section>
 
-        <section>
+        <section data-aos='fade-right'>
             <h3 class="h2 text-center mb-4 info">Informacion del Bungalow.</h2>
             <p class="text-center p">El Bungalow Gutierrez posee tres grandes ambientes: En planta alta una amplia habitacion con cama King size con baño en suite privado, otra habitacion secundaria con tres camas singles, en ambas ropero integrado, Tv por cable y calefaccion propia. En planta baja cuenta con un Living con sillon cama en el que se pueden armar otras dos camas singles, Cuenta con un comedor con sillas y Tv. Cocina 100% equipada con horno, heladera, microondas y todos los utensillos necesarios. Tambien posee un baño completo con bañera de hidromasajes y piso radiante. Toda la unidad cuenta con ventanales con vista al bosque, el lago y las montañas, deck exterior con parrilla y comedor externo techado.
         </section>
 
-        <section>
+        <section data-aos='fade-left'>
             <h3 class="h3 text-center mt-5 mb-4">Servicios</h3>
             <div class="services">
                 <div class="colum mb-4">
@@ -185,7 +185,7 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" data-aos='fade-up'>
             <h3 class="h3 text-center mt-4">Realice su reserva para el Bungalow Moreno</h3>
             <a href="contact.html" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
