--- a/pages/cabNahuel.html
+++ b/pages/cabNahuel.html
@@ -85,14 +85,14 @@
                 <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
-            <div class="abs">
+            <div class="abs" data-aos='fade-down'>
                 <h1 class="h1" >Cabaña Nahuel</h2>
                 <h2 class="h2"> Cabaña Doble</h2>
             </div>
         </section>
 
 
-        <section class="text-center mt-5 icons">
+        <section class="text-center mt-5 icons" data-aos='fade-right'>
             <div class="mb-5">
                 <img src="../images/persons.png" class="mb-2" alt="iconoPersonas">
                 <h2 class="h2"><b>4</b></h2>
@@ -111,14 +111,14 @@
         </section>
 
 
-        <section>
+        <section data-aos='fade-right'>
             <h3 class="h2 text-center mb-4 info">Informacion de la Cabaña.</h2>
             <p class="text-center p">La cabaña Nahuel cuenta con un gran ambiente integrado: Posee un amplio Living con un sillon cama en el que se pueden armar dos camas singles. Cuenta con una mesa comedor con sillas, hogar a leña, cocina 100% equipada. Tambien posee un baño completo con bañera y una Habitacion con cama Queen size con tv y calefaccion. Cabaña con vista al Lago Nahuel Huapi y deck exterior con mesa y sillas.</p>
         </section>
 
-        <section>
-            <h3 class="h3 text-center mt-5 mb-4">Servicios</h3>
-            <div class="services">
+        <section data-aos='fade-left'>
+            <h3 class="h3 text-center mt-5 mb-4" >Servicios</h3>
+            <div class="services" data-aos='fade-left'>
                 <div class="colum mb-4">
                     <div class="infor">
                         <img src="../images/check.png" alt="iconoCheck">
@@ -188,7 +188,7 @@
             </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center" data-aos='fade-up'>
             <h3 class="h3 text-center mt-2">Realice su reserva para la cabaña Nahuel</h3>
             <a href="contact.html" class="btn btn-outline-secondary btn-xl mt">Reservar ahora</a>
         </section>
